# dc_generator

./: README.md  pyproject.toml  requirements.txt
app/: main.py
app/routers/: contracts.py
app/schemas/: api.py
app/services/: contract_generator.py  detector.py  inferrer.py  parser.py  test_generator.py
app/templates/: index.html
test_data/: employees.xml  products.csv  users.json
tests/: test_contract_generator.py  test_detector.py  test_inferrer.py  test_parser.py  test_test_generator.py
