[project]
name = "dc_generator"
version = "1.0.0"
description = "Data Contract Generator - Auto-detect file types and generate Pydantic contracts"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "Jinja2>=3.1.0",
    "pydantic>=2.0.0",
    "python-multipart>=0.0.9",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"
